# fair_neighborhood

./: .gitignore  LICENSE  README.md  pyproject.toml
coco/all/13800/: opt_params.json  results.json
coco/all/1452/: opt_params.json  results.json
coco/all/1994/: opt_params.json  results.json
coco/all/42/: opt_params.json  results.json
coco/all/7/: opt_params.json  results.json
coco/subset/13800/: opt_params.json  results.json
coco/subset/1452/: opt_params.json  results.json
coco/subset/1994/: opt_params.json  results.json
goodreads/: goodreads_processing.py
goodreads/13800/: opt_params.json  results.json
goodreads/1452/: opt_params.json  results.json
goodreads/1994/: opt_params.json  results.json
goodreads/42/: opt_params.json  results.json
goodreads/7/: opt_params.json  results.json
lastfm-1k/13800/: opt_params.json  results.json
lastfm-1k/1452/: opt_params.json  results.json
lastfm-1k/1994/: opt_params.json  results.json
lastfm-1k/42/: opt_params.json  results.json
lastfm-1k/7/: opt_params.json  results.json
ml-1m/13800/: opt_params.json  results.json
ml-1m/1452/: opt_params.json  results.json
ml-1m/1994/: opt_params.json  results.json
ml-1m/42/: opt_params.json  results.json
ml-1m/7/: opt_params.json  results.json
notebooks/: Coco_all.ipynb  Coco_dense.ipynb  Goodreads.ipynb  LFM1K.ipynb  ML1M.ipynb  results.ipynb
src/helper_functions/: data_formatting.py  metrics_accuracy.py  metrics_coverage.py  metrics_exposure.py
src/recommenders/: ease.py  fda.py  fslr.py  mf_fair.py  slim.py  slim_bn.py  slim_bn_admm.py
(+4 files in other folders)
